Finished building the header

--- a/index.html
+++ b/index.html
@@ -30,21 +30,17 @@
                         <svg class="user-nav__icon">
                             <use xlink:href="img/sprite.svg#icon-bookmark"></use>
                         </svg>
+                        <span class="user-nav__notification">7</span>
                     </div>
                     <div class="user-nav__icon-box">
                         <svg class="user-nav__icon">
                             <use xlink:href="img/sprite.svg#icon-chat"></use>
                         </svg>
-                        <span class="user-nav__notification">7</span>
+                        <span class="user-nav__notification">13</span>
                     </div>
-                    <div class="user-nav__icon-box">
-                        <!-- <svg class="user-nav__icon">
-                            <use xlink:href="img/sprite.svg#icon-bookmark"></use>
-                        </svg> -->
-                        <span class="user-nav__user">
-                            <img src="img/user.png" alt="user photo" class="user-nav__user-photo">
-                            <span class="user-nav__user-name">Kevin</span>
-                        </span>
+                    <div class="user-nav__user">
+                        <img src="img/user.png" alt="user photo" class="user-nav__user-photo">
+                        <span class="user-nav__user-name">Kevin</span>
                     </div>
                 </nav>
 
